# ChangeLog for net-dns/pdnsd
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.23 2004/04/03 02:45:23 dragonheart Exp $

  03 Apr 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild:
  Stable on x86, ppc, sparc. Changed version 1.1.10 to use $ROOT when 
  checking on the existing installation. Warning again - from version 
  1.1.10 the cache is stored in /var/cache rather the /var/lib. If you
  do an etc-update it should be smooth.

  28 Mar 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.6-r7.ebuild,
  pdnsd-1.1.9.ebuild:
  Stable on sparc & ppc - 1.1.9. Removed old versions

  21 Mar 2004; Daniel Black <dragonheart@gentoo.org> :
  Fixed digest - bug #45224 thanks to bugs.gentoo.org@tux.tmfweb.nl

  16 Mar 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild,
  pdnsd-1.1.9.ebuild:
  Added inherit eutils. Thanks to <aliz@gentoo.org>'s script for finding it

  24 Feb 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild:
  As cachedir has changed to /var/cache, change the user's config ready for
  etc-update.

*pdnsd-1.1.10 (23 Feb 2004)

  23 Feb 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild,
  files/pdnsd.rc6:
  ebuild cleanup.

  22 Feb 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild:
  version bump. Avoid clobbering previous cache. Cache moved to /var/cache from
  /var/lib.

  22 Feb 2004; Daniel Black <dragonheart@gentoo.org> files/pdnsd.rc6:
  Improved doco in init script

  21 Feb 2004; Daniel Black <dragonheart@gentoo.org> files/pdnsd.rc6:
  Added -s to files/pdnsd.rc6 to enable socket usage. Thanks to Eric Harney
  <eharney@clemson.edu> bug #42149

  19 Feb 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.9.ebuild:
  Bump to stable on x86. Few other small ebuild cleanups too.

  03 Feb 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.9.ebuild: