@@ -1,8 +1,8 @@
-MD5 f269b7a6e779bce823b6be6e94adfe1f ChangeLog 3564
+MD5 ece1f87b268257f8450f7b4d77242def ChangeLog 3697
 MD5 cd82be4729ad0da13f8e5e396dd29840 metadata.xml 437
 MD5 a415c002ad5217367da41f607bf6cad6 pdnsd-1.1.7a.ebuild 990
 MD5 51d039a99ad0ee24d4390b5cb8d85892 pdnsd-1.1.9.ebuild 2670
-MD5 a7c645a574331c5f146440dbd10cb389 pdnsd-1.1.10.ebuild 3254
+MD5 51f4b680abc978dfb8e82b397ca18e46 pdnsd-1.1.10.ebuild 3255
 MD5 729266103aee86613f32b6e39c03172f files/digest-pdnsd-1.1.7a 65
 MD5 2f4f436df1064eb21409e1ef613be068 files/digest-pdnsd-1.1.9 67
 MD5 d5e1cbb93d8bb06254e9daac8df76d8d files/pdnsd.online 459
