@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/pdnsd
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.23 2004/04/03 02:45:23 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.24 2004/04/09 03:29:32 dragonheart Exp $
+
+  09 Apr 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild:
+  Changed to add user/group pdnsd before the make install
 
   03 Apr 2004; Daniel Black <dragonheart@gentoo.org> pdnsd-1.1.10.ebuild:
   Stable on x86, ppc, sparc. Changed version 1.1.10 to use $ROOT when 
